7.x-1.14.1
----------
 - #2263 Fix harvest validation for accessLevel values
 - #2249 Change timezone handling to 'none' on temporal coverage field
 - #2103 Fixed field mapping defaults for open data schema APIs
 - #2237 Migration of CircleCI from V1 to V2
 - #2273 Remove dkan_workflow_permissions dependency

7.x-1.14
--------
 - Added new module Token Tweaks to allow ui control of token recursion level in effort to help avoid memory issues with Token (see https://www.drupal.org/node/1058912)
 - #2208 Fix access to groups field when adding a resource inside the dataset form.
 - #2188 Move DKAN repository to GetDKAN organization in Github
 - #2033 Remove "author" facet from search page (generally never relevant information)
 - #2205 Update docs files with organization changes (NuCivic to GetDKAN)
 - #2206 Update autocomplete_deluxe, better_exposed_filters, file_entity, media, media_youtube, tablefield and views to latest version
 - #2189 #2190 Documentation updates (Add help, license, dkan sites pages. Update site manager guide. Update dkan README.)
 - #2186 Move the 'back to dataset' local task position so that the 'revisions' link position matches the standard location.
 - #1979 Allow users to set Groups on standalone resources.
 - #2151 Adding print styling so that images, table rows, and charts work with page breaks.
 - #2141 Exclude header search form from printed output
 - #2174 Fix access to revisions for anonymous users when dkan_workflow is enabled.
 - #2175 Removed video content from the About page. Removed or replaced references to Granicus.
 - #2075 DKAN Harvest: Modified batch process to split harvest migrations in chunks.
 - #2145 Front page hero image no longer requests empty URL if variable empty.
 - #2124 Add results count and increase results per page on the harvest dashboard view.
 - #2082 Add UI for generating ODSM file caches.
 - #2058 Improve messages displayed when creating a harvest source.