@@ -18,6 +18,8 @@ services:
       - "./.docker/etc/php5/php.ini:/etc/php5/fpm/conf.d/z_php.ini"
       - "./.docker/etc/php5/xdebug-linux.ini:/etc/php5/xdebug-linux.ini"
       - "./.docker/etc/php5/xdebug-macos.ini:/etc/php5/xdebug-macos.ini"
+    env_file:
+      - mysql.env
 
   # DB node
   db:
@@ -25,11 +27,9 @@ services:
     image: blinkreaction/mysql:5.5
     ports:
       - "3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=admin123
-      - MYSQL_USER=drupal
-      - MYSQL_PASSWORD=123
-      - MYSQL_DATABASE=drupal
+    # MYSQL Credentials in mysql.env
+    env_file:
+      - mysql.env
     volumes:
        # MySQL configuration overrides
        - "./.docker/etc/mysql/my.cnf:/etc/mysql/conf.d/z_my.cnf"
@@ -45,6 +45,8 @@ services:
     image: nuams/drupal-cli:2016-10-16
     environment:
       - XDEBUG_CONFIG=idekey=PHPSTORM
+    env_file:
+      - mysql.env
     links:
       - db
       - web
