@@ -1,0 +1,4 @@
+MYSQL_ROOT_PASSWORD=admin123
+MYSQL_USER=drupal
+MYSQL_PASSWORD=123
+MYSQL_DATABASE=drupal
