@@ -5,6 +5,7 @@
  - #2103 Fixed field mapping defaults for open data schema APIs
  - #2237 Migration of CircleCI from V1 to V2
  - #2273 Remove dkan_workflow_permissions dependency
+ - #2283 Share MySQL Credentials With Docker Containers
 
 7.x-1.14
 --------
